Setting fork count